# twitch_ebooks

./: .env  .gitignore  Cargo.toml  README.md  TwitchEbooks.sln
.github/workflows/: docker-publish.yml
TwitchEbooks/: Dockerfile  Program.cs  Startup.cs  TwitchEbooks.csproj  Worker.cs  appsettings.json
TwitchEbooks.Database/: README.md  TwitchEbooks.Database.csproj  TwitchEbooksContext.cs  TwitchEbooksContextFactory.cs
TwitchEbooks.Database/Migrations/: 20200716220915_InitialMigration.Designer.cs  20200716220915_InitialMigration.cs  20200717044044_InitialMigration.Designer.cs  20210525012520_AddBannedUsers.Designer.cs  20210525012520_AddBannedUsers.cs  20210525035723_InitialMigration.Designer.cs  20210525035723_InitialMigration.cs  20210526034910_BannedToIgnored.Designer.cs  20210526034910_BannedToIgnored.cs  TwitchEbooksContextModelSnapshot.cs
TwitchEbooks.Database/Models/: BannedTwitchUser.cs  IgnoredTwitchUser.cs  TwitchChannel.cs  TwitchMessage.cs  UserAccessToken.cs
TwitchEbooks.Twitch/: TwitchEbooks.Twitch.csproj
TwitchEbooks.Twitch.Tests/: TwitchEbooks.Twitch.Tests.csproj
TwitchEbooks.Twitch.Tests/Chat/: IrcMessageParserTests.cs  TwitchClientTests.cs
TwitchEbooks.Twitch.Tests/Extensions/: IrcMessageExtensionsTests.cs
TwitchEbooks.Twitch/Api/: TwitchApi.cs  TwitchApiFactory.cs
TwitchEbooks.Twitch/Chat/: IrcMessageParser.cs  TwitchClient.cs
TwitchEbooks.Twitch/Extensions/: IrcMessageExtensions.cs  (+1 more)
TwitchEbooks2/: Program.cs  appsettings.json
migrations/: 20210407194049_initial-migration.sql
src/: chain.rs  http.rs  main.rs  markov.rs
(+86 files in other folders)
