[package]
name = "twitch_ebooks"
version = "0.1.0"
authors = ["Justin Schweigert <justin@schweigert.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.5", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
twitch-irc = "2.2"